[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
chrono = "0.4.38"
dotenv = "0.15.0"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std", "chrono"] }
thiserror = "1.0.64"

[profile.dev.package.sqlx-macros]
opt-level = 3
