[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
axum = { version = "0.7.7", features = ["multipart"] }
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
thiserror = "1.0.64"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"

[profile.dev.package.sqlx-macros]
opt-level = 3
